--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
   text-align: center;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Calc {
+  margin-top: 20px;
+  width: 500px;
+  margin: auto;
+  border: 5px solid black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Disp {
+  background-color: gray;
+  height: 40px;
+  border: 1px solid lightgray;
+  font-size: 2em;
+  text-align: right;
+  padding: 10px;
+  margin-bottom: 10px; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Buttons {
+  display: grid; 
+  grid-template-columns: repeat(4, 1fr); 
+  border: 5px solid red;
+  height: 300px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.Buttons button {
+  background-color: yellow;
+  border: 2px solid lightpink;
+  font-size: 1.5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: rgb(206, 203, 38);
 }
