--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,97 @@
 .App {
-  text-align: center;
   box-sizing: border-box;
+  text-align: center;
+  background-color: white;
 }
 
-.Calc {
-  margin-top: 20px;
-  width: 500px;
+.Border{
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+  background-color: lightgray;
+}
+
+
+.Calc{
   margin: auto;
-  border: 5px solid black;
+  margin-top: 10px;
+  padding: 3px;
+  width: 500px;
+  background-color: lightslategray;
+  border: 2px solid black;
+  border-radius: 10px;
+  
 }
 
-.Disp {
-  background-color: gray;
-  height: 40px;
-  border: 1px solid lightgray;
-  font-size: 2em;
+.Disp{
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: lightgray !important;
+  font-size: 2rem;
+  height: 50px;
   text-align: right;
+  margin-bottom: 2px;
+  margin: 20px;
   padding: 10px;
-  margin-bottom: 10px; 
 }
 
 .Buttons {
-  display: grid; 
-  grid-template-columns: repeat(4, 1fr); 
-  border: 5px solid red;
+  display: grid;
+  gap: 2px;
+  grid-template-columns: repeat(4, 1fr);
   height: 300px;
-  cursor: pointer;
+  font-size: 2rem;
+  padding: 3px;
+  background-color: lightgray;
+  
 }
 
-.Buttons button {
-  background-color: yellow;
-  border: 2px solid lightpink;
-  font-size: 1.5em;
+
+.Buttons > button {
+  background-color: lightgray;
+  border: 2px solid black;
+  font-size: 1em;
+  border-radius: 5px; 
+
 }
 
-button:hover {
-  background-color: rgb(206, 203, 38);
+.Buttons > button:hover {
+  background-color: rgb(173, 170, 170);
+}
+
+
+.full-width {
+  grid-column: span 4; 
+}
+
+.red-button {
+  background-color: red !important; 
+  color: white !important;
+  border: 2px solid black;
+}
+
+.red-button:hover {
+  background-color: #b22222 !important;
+}
+
+
+.blue-button{
+  background-color: #647299 !important;
+  color: white;
+  border: 2px solid black;
+}
+
+.blue-button:hover {
+  background-color: #506b8f !important;
+}
+
+.cyan-button{
+  background-color: #049484 !important;
+  color: white;
+  border: 2px solid black;
+}
+
+.cyan-button:hover {
+  background-color: #037373 !important;
 }
