--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   background-color: lightgray !important;
   font-size: 2rem;
   height: 100px;
-  text-align: right;
+  text-align: left;
   margin-bottom: 2px;
   margin: 20px;
   padding: 10px;
