--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,7 @@
   background-color: lightgray;
 }
 
-
-.Calc{
+.Calc {
   margin: auto;
   margin-top: 10px;
   padding: 3px;
@@ -21,17 +20,15 @@
   background-color: lightslategray;
   border: 2px solid black;
   border-radius: 10px;
-  
 }
 
-.Disp{
+.Disp {
   border: 1px solid black;
   border-radius: 5px;
-  background-color: lightgray !important;
+  background-color: lightgray;
   font-size: 2rem;
   height: 100px;
   text-align: left;
-  margin-bottom: 2px;
   margin: 20px;
   padding: 10px;
 }
@@ -41,32 +38,29 @@
   gap: 2px;
   grid-template-columns: repeat(4, 1fr);
   height: 300px;
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 3px;
   background-color: lightgray;
-  
 }
-
 
 .Buttons > button {
   background-color: lightgray;
   border: 2px solid black;
-  font-size: 1em;
+  font-size: 1.5rem;
   border-radius: 5px; 
-
 }
 
 .Buttons > button:hover {
   background-color: rgb(173, 170, 170);
 }
 
-
 .full-width {
-  grid-column: span 4; 
+  grid-column: span 4;
+  font-size: 1.5rem;
 }
 
 .red-button {
-  background-color: red !important; 
+  background-color: red !important;
   color: white !important;
   border: 2px solid black;
 }
@@ -75,8 +69,7 @@
   background-color: #b22222 !important;
 }
 
-
-.blue-button{
+.blue-button {
   background-color: #647299 !important;
   color: white;
   border: 2px solid black;
@@ -86,7 +79,7 @@
   background-color: #506b8f !important;
 }
 
-.cyan-button{
+.cyan-button {
   background-color: #049484 !important;
   color: white;
   border: 2px solid black;
