--- a/src/App.css
+++ b/src/App.css
@@ -79,12 +79,12 @@
   background-color: #506b8f !important;
 }
 
-.cyan-button {
-  background-color: #049484 !important;
+.gray-button {
+  background-color: #818589 !important;
   color: white;
   border: 2px solid black;
 }
 
-.cyan-button:hover {
-  background-color: #037373 !important;
+.gray-button:hover {
+  background-color: #808080 !important;
 }
