--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,15 @@
   font-size: 1.5rem;
   padding: 3px;
   background-color: lightgray;
+  color: white;
 }
 
 .Buttons > button {
   background-color: lightgray;
   border: 2px solid black;
   font-size: 1.5rem;
-  border-radius: 5px; 
+  border-radius: 5px;
+  color: white;
 }
 
 .Buttons > button:hover {
