--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 .Buttons {
   display: grid;
   gap: 2px;
-  grid-template-columns: repeat(3);
+  grid-template-columns: repeat(3, 1fr);
   height: 300px;
   font-size: 1.5rem;
   padding: 3px;
