--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   background-color: white;
 }
 
-.Border{
+.Border {
   border: 2px solid black;
   border-radius: 10px;
   padding: 5px;
@@ -37,7 +37,7 @@
   display: grid;
   gap: 2px;
   grid-template-columns: repeat(3, 1fr);
-  height: 300px;
+  min-height: 300px;
   font-size: 1.5rem;
   padding: 3px;
   background-color: lightgray;
@@ -57,7 +57,7 @@
 }
 
 .full-width {
-  grid-column: span 4;
+  grid-column: span 3;
   font-size: 1.5rem;
 }
 
