--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@
 
 .Calc {
   margin: auto;
-  margin-top: 10px;
-  padding: 3px;
-  width: 500px;
+  margin-top: 20px;
+  padding: 10px;
+  width: 600px;
   background-color: lightslategray;
   border: 2px solid black;
   border-radius: 10px;
@@ -26,20 +26,21 @@
   border: 1px solid black;
   border-radius: 5px;
   background-color: lightgray;
-  font-size: 2rem;
-  height: 100px;
+  font-size: 2.5rem;
+  height: 150px;
   text-align: left;
   margin: 20px;
-  padding: 10px;
+  padding: 15px;
+  word-wrap: break-word;
 }
 
 .Buttons {
   display: grid;
-  gap: 2px;
+  gap: 3px;
   grid-template-columns: repeat(3, 1fr);
-  min-height: 300px;
-  font-size: 1.5rem;
-  padding: 3px;
+  min-height: 400px;
+  font-size: 1.8rem;
+  padding: 5px;
   background-color: lightgray;
   color: white;
 }
@@ -47,7 +48,7 @@
 .Buttons > button {
   background-color: lightgray;
   border: 2px solid black;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   border-radius: 5px;
   color: white;
 }
@@ -58,7 +59,7 @@
 
 .full-width {
   grid-column: span 3;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .red-button {
