--- a/src/App.css
+++ b/src/App.css
@@ -26,13 +26,13 @@
   border: 1px solid black;
   border-radius: 5px;
   background-color: lightgray;
-  font-size: 2rem;
+  font-size: 5vw; /
   height: 200px;
   text-align: left;
   margin: 20px;
   padding: 15px;
   word-wrap: break-word;
-}
+  overflow: hidden;
 
 .Buttons {
   display: grid;
