--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
   border: 1px solid black;
   border-radius: 5px;
   background-color: lightgray;
-  font-size: 5vw; /
+  font-size: 5vw;
   height: 200px;
   text-align: left;
   margin: 20px;
